# Davinci-MCP

./: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
